--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,10 @@ dependencies = [
     "pydantic-evals[logfire]>=0.1.3",
     "python-dotenv>=1.1.0",
 ]
+
+[tool.hatch.build.targets.wheel]
+packages = ["agents_mcp_usage"]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
