--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pydantic-ai-slim[mcp]>=0.1.3",
     "pydantic-evals[logfire]>=0.1.3",
     "python-dotenv>=1.1.0",
+    "ruff>=0.11.10",
 ]
 
 [tool.hatch.build.targets.wheel]
