--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,15 @@ dependencies = [
     "langgraph>=0.3.31",
     "logfire>=3.14.0",
     "loguru>=0.7.3",
-    "mcp==1.6.0",
+    "mcp==1.9.0",
     "openai-agents>=0.0.12",
-    "pydantic-ai-slim[mcp]>=0.1.3",
-    "pydantic-evals[logfire]>=0.1.3",
+    "pandas>=2.3.0",
+    "plotly>=6.1.2",
+    "pydantic-ai-slim[mcp]>=0.2.15",
+    "pydantic-evals[logfire]>=0.2.15",
     "python-dotenv>=1.1.0",
     "ruff>=0.11.10",
+    "streamlit>=1.45.1",
 ]
 
 [tool.hatch.build.targets.wheel]
