--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "openai-agents>=0.0.12",
     "pandas>=2.3.0",
     "plotly>=6.1.2",
-    "pydantic-ai-slim[mcp]>=0.2.15",
+    "pydantic-ai-slim[bedrock,mcp]>=0.2.15",
     "pydantic-evals[logfire]>=0.2.15",
     "python-dotenv>=1.1.0",
     "ruff>=0.11.10",
