--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,10 @@ dependencies = [
     "streamlit>=1.45.1",
 ]
 
-[tool.hatch.build.targets.wheel]
-packages = ["agents_mcp_usage"]
+[tool.uv.build-backend]
+module-name = "agents_mcp_usage"
+module-root = ""
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["uv_build>=0.7.19,<0.8.0"]
+build-backend = "uv_build"
